# web-scraping-hltv

./: .env  Dockerfile  main.py  pyproject.toml
app/: config.py  dependencies.py
app/controllers/: championships_controller.py  coach_controller.py  match_controller.py  news_controller.py  player_controller.py  team_info_controller.py  transfer_controller.py  trophy_controller.py
app/dtos/: championships_dto.py  coach_dto.py  match_dto.py  news_dto.py  player_dto.py  players_dto.py  team_info_dto.py  transfer_dto.py  trophy_dto.py
app/services/: championships_service.py  coach_service.py  info_team_service.py  match_service.py  news_service.py  player_service.py  transfer_service.py  trophy_service.py
